--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
 
+ @font-face {
+ 	font-family: BentonSans; 
+ 	src: url(BentonSans/benton-sans-cond-regular/benton-sans-cond-regular.ttf); 
+ }
+
+ @font-face{
+ 	font-family: BentonSansBold; 
+ 	src: url(BentonSans/benton-sans-cond-bold/benton-sans-cond-bold.ttf); 
+ }
+
+body{
+	font-family: BentonSans;
+}
+
 /*layout*/
 
 #content{
@@ -8,18 +22,17 @@
 }
 
 #header{
-	margin-top: 20px;
-	background: red;
 	width: 100%;
-	height: 100px;
-	font-family: "Helvetica";
-	font-size: 20px;
+	height: 20px;
+	text-align: center;
 }
 
+/*img{border: 1px blue solid;}*/
+
 .content_intro{
-	background: blue;
 	width: 100%;
-	height: 300px;
+	height: 429px;
+	text-align: center;
 }
 
 .img_intro{
@@ -36,35 +49,42 @@
 	float: right;
 }
 
+.title{
+	border-top: solid 2px #ff3f65;
+	padding-top: 10px;
+	color: #0089ff;
+	font-size: 40px;
+	text-align: left;
+	width: 100%;
+}
+
 #content_map{
 	width: 100%;
 	height: auto;
-	background: red;
 }
 
 #menu{
-	width: 75%;
-	height: 80px;
-	background: green;
+	width: 100%;
+	height: 30px;
 	float: left;
 }
 
 #filter{
-	width: 25%;
-	height: 80px;
+	width: 100%;
+	height: 30px;
 	background: pink;
 	float: right;
 }
 
 #map{
 	height: 550px;
-	width: 75%;
+	width: 100%;
 	float: left;
 }
 
 #info{
-	height: 550px;
-	width: 25%;
+	height: 80px;
+	width: 100%;
 	background: yellow;
 	float: right;
 }
@@ -76,8 +96,7 @@
 
 #spider{
 	width: 60%;
-	height: 200px;
-	background: red;
+	height: auto;
 	float: left;
 }
 
@@ -96,20 +115,28 @@
 }
 
 .div_select{
-	width: 29%;
+	width: 32.5%;
 	float: left;
-	padding: 1% 2%;
+	vertical-align: center;
+}
+
+.div_select label{
+	font-family:BentonSansBold ;
+	font-size: 24px;
+	vertical-align: center;
+	padding-left: 5px;
 }
 
 /*elements*/
 .menu_select{
-	width: 100%;
-	padding: 2%;
-	display: block;
+	width: 270px;
+	padding-left: 5px;
+	height: 24px;
+	vertical-align:text-bottom;
 }
 
 .div_select_edo{
-	width: 100%;
+	width: 60%;
 	float: left;
 	padding-top: 2%;
 }
@@ -119,3 +146,9 @@
 	float: right;
 	padding: 1% 2%;
 }
+
+.mujeres_font{ color: #0089ff; }
+
+.general_font{ color: #ff3f65; }
+
+.atencion_font{ color: #ffb900; }
