--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body{
 
 #header{
 	width: 100%;
-	height: 20px;
 	text-align: center;
 }
 
@@ -31,7 +30,7 @@ body{
 
 .content_intro{
 	width: 100%;
-	height: 429px;
+	height: 2050px;
 	text-align: center;
 }
 
@@ -50,8 +49,7 @@ body{
 }
 
 .title{
-	border-top: solid 2px #ff3f65;
-	padding-top: 10px;
+	padding-top: 3px;
 	color: #0089ff;
 	font-size: 40px;
 	text-align: left;
@@ -59,7 +57,8 @@ body{
 }
 
 #content_map{
-	width: 100%;
+	width: 90%;
+	margin-left: 10%;
 	height: auto;
 }
 
@@ -71,14 +70,14 @@ body{
 
 #filter{
 	width: 100%;
-	height: 30px;
-	background: pink;
+	height: 300px;
 	float: right;
 }
 
 #map{
 	height: 550px;
 	width: 100%;
+	margin-left: 10%;
 	float: left;
 }
 
@@ -90,6 +89,12 @@ body{
 }
 
 #content_spider{
+	height: auto;
+	width: 80%;
+	margin-left: 8%;
+}
+
+#content_spider2{
 	height: auto;
 	width: 100%;
 }
@@ -110,7 +115,6 @@ body{
 #footer{
 	width: 100%;
 	height: 100px;
-	background: yellow;
 	float: right;
 }
 
@@ -152,3 +156,8 @@ body{
 .general_font{ color: #ff3f65; }
 
 .atencion_font{ color: #ffb900; }
+
+#img_head{
+	width: 90%;
+	height: 90%;
+}
